--- a/csmall-stock/csmall-stock-webapi/src/main/resources/application-dev.yml
+++ b/csmall-stock/csmall-stock-webapi/src/main/resources/application-dev.yml
@@ -36,3 +36,7 @@ dubbo:
     #    设置为false表示不检查,以减少启动时出现的错误
     check: false
     timeout: 5000
+redis:
+  host: 176.13.14.106
+  port: 6379
+  password:
